--- a/report.rmd
+++ b/report.rmd
@@ -24,11 +24,20 @@ The title is "*Measuring the temporal and spatial impact of events on pedestrian
 
 The dataset was obtained on [City of Melbourne - Pedestrian Counting System](http://www.pedestrian.melbourne.vic.gov.au/). The data is from pedestrian counting system (loop sensor) and it contains hourly counts from 2009 to 2019. 
 
-## Method
+## 3. Method
 The proposed method is evaluate methods to automatically detect events occured in the city, understand the event behavior in terms of time and space.
 
 ### Time domain
 For time domain was used Wavelet Transform to detect the events and figure out the total time that each event affect the city.
 
-## Space domain
+### Space domain
 In space domain the objective is identify the spread of the each type of event.
+
+## 4. Daily report
+
+### 21-07-2020
+[] Code function to open pedestrian data
+[] There is some error with sunlight, correct them on dataset
+[] Time domain analysis
+[] Wavelet analysis
+[] Spatio analysis
